# wallyd

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  Makefile.am  README.md  autogen.sh  configure.ac  version
etc/: flags  wallyd.conf  wallyd.startup  wallyd.startup.osx  wallyd.startup.screen  wallystart.conf
etc/wallyd.d/: cloud.js  defaults.js  execserver.js  features.json  main.js  package.json  playlist.js  settings.json.template  ssdp.js  test.js  wally.execserver.js  wallyd.co2.js  wallyd.defaults.js  wallyd.execserver.js  wallyd.modules.js  wallyd.network-monitor.js  wallyd.screen.js  wallyd.server.js  wallyd.setup  wallyd.setup.js  wallyd.ssdp.js  wallyd.wgui.js
etc/wallyd.d/examples/: wallyd.xsvg.js
etc/wallyd.d/fonts/: README.md
etc/wallyd.d/modules/: bootstrap.js  compat.js  curl.js  extra.js  fs.js  http-codec.js  log.js  mysocket.js  net.js  request.js  theme-256.js  transaction.js  wallaby.js  wrap-socket.js
etc/wallyd.d/modules.duv/: classes.js  log.js  theme-256.js  utils.js
etc/wallyd.d/modules/core/: stream.js
etc/wallyd.d/modules/qr/: qr.js
etc/wallyd.d/modules/wally/: color.js  compat.js  font.js  jswatchdog.js  myPlugin.js  texture.js  transaction.js  wallabyRenderer.js
etc/wallyd.d/modules/wally/commands/: image.js  sdl.js  show.js  system.js  wallaby.js  wallyscript.js
etc/wallyd.d/tests/: client-udp.js  client.js  client2.js  client3.js  client4.js  co2.json  co2.xml  icinga.json  revo.json  ssdp.js  ta-test.js  temp.json  texture-test.js  wallaby-data.json  wallaby-demo.json  wallaby-large.json  wallybill.json  wallybill.json.bak  wallyd.execserver.js  wallyd.server.js
etc/wallyd.d/texapps/: demo.js  demo2.js  log.js  main.js  mem.js  memdbg.js  netinfo.js  network.js  stat.js  up.js  version.js  video.js
extra/: README.md  dht22.c
ffplay2/ffmpeg-2.x/: cmdutils.c
ffplay2/ffmpeg-2.x/compat/: cmdutils.h
ffplay2/ffmpeg-2.x/libavutil/: colorspace.h
ffplay2/ffmpeg-3.x/: cmdutils.c  ffplay.c  postprocess.c
ffplay2/ffmpeg-3.x/compat/: cmdutils.h
ffplay2/ffmpeg-3.x/include/: cmdutils_common_opts.h  ffplay.h
lib/: CMakeLists.txt  Hash_Table.c  Hash_Table.h  Makefile.am  autoversion.h  autoversion.h.in  buf.c  buf.h  connect.c  connect.h  default.h  getifaddr.c  hashtable.c  hashtable.h  json.c  json.h  memfs.c  miniz.c  miniz.h  parseJson.c  plugins.c  plugins.h  queue.c  slog.c  slog.h  sys.c  sysold.c  ui.c  ui.h  util.c  util.h
plugins/: CMakeLists.txt  Makefile.am  client.c  client.h  dukcurl.c  dukcurl.h  duktools.h  gpio.c  gpio.h  js.c  myPlugin.c  opencv.c  persist.c  register.c  screen.c  sdlffvideo.c  sdlffvideo.h  sdlgui.c  sdlimage.c  sdlimage.h  sdlvideo.c  sdlvideo.h  ssdp.c  ssdp.h  svg2image.c  svg2image.h  texture.c  transaction.c  video.c  video_test.c  wallaby.c  watchdog.c  zbar.c
plugins/ffplay/: cmdutils.c  ffplay.c  postprocess.c
plugins/ffplay/include/: ffplay.h  postprocess.h
plugins/ffplay/libavutil/: ffplay.h  libm.h
src/: CMakeLists.txt  Makefile.am  autoversion.h  blend.c  cmake_install.cmake  drmtest.c  dukcurl.c  dukcurl.h  duv.c  duv.h  dwallyd.c  gltriangle.c  kms-pageflip.c  kmscube.c  lldb_wallyd  modeset.c  resample2.c  schema.c  schema.h  schema.h.old  sdl_test.c  sdldemo.c  seaduk.c  swallyd  tcp.cpp  tcp.h  testaudio.c  testvideo.c  testvideo.h  wallyc.cpp  wallyc3.c  wallyd.c  wallyd.h  wallyjs.cpp  wallystart.c  wallystart.h
wallyd.xcodeproj/: project.pbxproj
wallyd.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
wallyd.xcodeproj/xcuserdata/mokai.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
wallyd.xcodeproj/xcuserdata/mokai.xcuserdatad/xcschemes/: dwallyd.xcscheme  libwallyd.xcscheme  wallyd.xcscheme  xcschememanagement.plist
