set(TEST_SRC drmtest.c)

# On Linux build some KMS / DRM Test programms
if(${CMAKE_SYSTEM_NAME} MATCHES "Linuxx")
  pkg_check_modules(LIBDRM libdrm)
  pkg_check_modules(LIBDRI libdri)
  pkg_check_modules(LIBGLES2 libglesv2)
  pkg_check_modules(LIBGBM libgbm)
  set(CMAKE_C_FLAGS  "${CMAKE_C_FLAGS} -L/data/wally/buildroot/output/staging/usr/lib -DMESA_EGL_NO_X11_HEADERS -I/data/wally/buildroot/output/build/libdrm-2.4.68/libkms -I/data/wally/buildroot.x86/output/target/usr/include/cairo/")
  add_executable(drmtest ${TEST_SRC})
  add_executable(kmscube kmscube.c esTransform.c)
#  add_executable(kms-pageflip kms-pageflip.c)
  add_executable(modeset modeset.c)
  target_link_libraries(kmscube EGL GLESv2 gbm m kms cairo drm ${LIBDRI_LIBRARIES} ${LIBGLES2_LIBRARIES} ${LIBGBM_LIBRARIES})
  target_link_libraries(modeset EGL GLESv2 gbm m kms cairo drm ${LIBDRI_LIBRARIES} ${LIBGLES2_LIBRARIES} ${LIBGBM_LIBRARIES})
  target_link_libraries(drmtest EGL GLESv2 gbm drm ${LIBDRI_LIBRARIES} ${LIBGLES2_LIBRARIES} ${LIBGBM_LIBRARIES})
  include_directories(${LIBDRI_INCLUDE_DIRS} ${LIBGLES2_INCLUDE_DIRS} ${LIBGBM_INCLUDE_DIRS} ${LIBDRM_INCLUDE_DIRS})
  install(TARGETS drmtest DESTINATION ${BIN_INSTALL_DIR})
  install(TARGETS kmscube DESTINATION ${BIN_INSTALL_DIR})
  install(TARGETS modeset DESTINATION ${BIN_INSTALL_DIR})
endif()


if(WITH_SEADUK STREQUAL on)
	set(DWALLYD_SRC dwallyd.c nucly/env.c nucly/path.c seaduk.c ../lib/miniz.c)
	add_executable(dwallyd ${DWALLYD_SRC})
	target_link_libraries(dwallyd ${LIBUV_LIBRARIES} ${LIBSDL_LIBRARIES} wallyd seaduk)
else()
	set(DWALLYD_SRC dwallyd.c duv.c schema.c dukcurl.c)
	add_executable(dwallyd ${DWALLYD_SRC})
	target_link_libraries(dwallyd ${LIBUV_LIBRARIES} ${LIBSDL_LIBRARIES} wallyd)
endif()

install(TARGETS dwallyd DESTINATION ${BIN_INSTALL_DIR})

