set(TEST_SRC drmtest.c)

# On Linux build some KMS / DRM Test programms
if(${CMAKE_SYSTEM_NAME} MATCHES "Linuxx")
  pkg_check_modules(LIBDRM libdrm)
  pkg_check_modules(LIBDRI libdri)
  pkg_check_modules(LIBGLES2 libglesv2)
  pkg_check_modules(LIBGBM libgbm)
  set(CMAKE_C_FLAGS  "${CMAKE_C_FLAGS} -L/data/wally/buildroot/output/staging/usr/lib -DMESA_EGL_NO_X11_HEADERS -I/data/wally/buildroot/output/build/libdrm-2.4.68/libkms -I/data/wally/buildroot.x86/output/target/usr/include/cairo/")
  add_executable(drmtest ${TEST_SRC})
  add_executable(kmscube kmscube.c esTransform.c)
#  add_executable(kms-pageflip kms-pageflip.c)
  add_executable(modeset modeset.c)
  add_executable(fb2png fb2png.c)
  target_link_libraries(kmscube EGL GLESv2 gbm m kms cairo drm ${LIBDRI_LIBRARIES} ${LIBGLES2_LIBRARIES} ${LIBGBM_LIBRARIES})
  target_link_libraries(modeset EGL GLESv2 gbm m kms cairo drm ${LIBDRI_LIBRARIES} ${LIBGLES2_LIBRARIES} ${LIBGBM_LIBRARIES})
  target_link_libraries(drmtest EGL GLESv2 gbm drm ${LIBDRI_LIBRARIES} ${LIBGLES2_LIBRARIES} ${LIBGBM_LIBRARIES})
  include_directories(${LIBDRI_INCLUDE_DIRS} ${LIBGLES2_INCLUDE_DIRS} ${LIBGBM_INCLUDE_DIRS} ${LIBDRM_INCLUDE_DIRS})
  install(TARGETS drmtest DESTINATION ${BIN_INSTALL_DIR})
  install(TARGETS kmscube DESTINATION ${BIN_INSTALL_DIR})
  install(TARGETS modeset DESTINATION ${BIN_INSTALL_DIR})
  install(TARGETS fb2png DESTINATION ${BIN_INSTALL_DIR})
endif()

set(WALLYC_SRC wallyc.cpp tcp.cpp)
add_executable(wallyc ${WALLYC_SRC})
target_link_libraries(wallyc)

set(SDLDEMO sdldemo.c)
add_executable(sdldemo ${SDLDEMO})
target_link_libraries(sdldemo ${LIBSDL_LIBRARIES} ${LIBSDLIMG_LIBRARIES})

if(WITH_SEADUK STREQUAL on)
	set(DWALLYD_SRC wallyd.c nucly/env.c nucly/path.c seaduk.c ../lib/miniz.c)
	add_executable(wallyd ${DWALLYD_SRC})
	target_link_libraries(wallyd ${LIBUV_LIBRARIES} ${LIBSDL_LIBRARIES} wally seaduk)
else()
	set(DWALLYD_SRC wallyd.c duv.c schema.c dukcurl.c)
	add_executable(wallyd ${DWALLYD_SRC})
	target_link_libraries(wallyd ${LIBUV_LIBRARIES} ${LIBSDL_LIBRARIES} wally)
endif()

install(TARGETS wallyd DESTINATION ${BIN_INSTALL_DIR})

