set(TEST_SRC drmtest.c)

# On Linux build some KMS / DRM Test programms
if(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
 if(${WITH_KMS_DEMO} MATCHES "on")
  pkg_check_modules(LIBDRM libdrm)
  pkg_check_modules(LIBDRI libdri)
  pkg_check_modules(LIBGLES2 libglesv2)
  pkg_check_modules(LIBGBM libgbm)
  set(CMAKE_C_FLAGS  "${CMAKE_C_FLAGS} -DMESA_EGL_NO_X11_HEADERS")
  add_executable(drmtest ${TEST_SRC})
  add_executable(kmscube kmscube.c esTransform.c)
  add_executable(modeset modeset.c)
  add_executable(fb2png fb2png.c)
  target_link_libraries(kmscube EGL GLESv2 gbm m kms drm ${LIBDRI_LIBRARIES} ${LIBGLES2_LIBRARIES} ${LIBGBM_LIBRARIES})
  target_link_libraries(modeset EGL GLESv2 gbm m kms drm ${LIBDRI_LIBRARIES} ${LIBGLES2_LIBRARIES} ${LIBGBM_LIBRARIES})
  target_link_libraries(drmtest EGL GLESv2 gbm drm ${LIBDRI_LIBRARIES} ${LIBGLES2_LIBRARIES} ${LIBGBM_LIBRARIES})
  target_link_libraries(fb2png ${LIBPNG_LIBRARIES} png)
  include_directories(${LIBDRI_INCLUDE_DIRS} ${LIBGLES2_INCLUDE_DIRS} ${LIBGBM_INCLUDE_DIRS} ${LIBDRM_INCLUDE_DIRS} ${LIBPNG_INCLUDE_DIRS})
  install(TARGETS drmtest DESTINATION ${BIN_INSTALL_DIR})
  install(TARGETS kmscube DESTINATION ${BIN_INSTALL_DIR})
  install(TARGETS modeset DESTINATION ${BIN_INSTALL_DIR})
  install(TARGETS fb2png DESTINATION ${BIN_INSTALL_DIR})
 endif()
endif()

set(WALLYC_SRC wallyc.cpp tcp.cpp)
add_executable(wallyc ${WALLYC_SRC})
target_link_libraries(wallyc)
install(TARGETS wallyc DESTINATION ${BIN_INSTALL_DIR})

set(WALLYC_SRC wallyjs.cpp tcp.cpp)
add_executable(wallyjs ${WALLYC_SRC})
target_link_libraries(wallyjs)
install(TARGETS wallyjs DESTINATION ${BIN_INSTALL_DIR})

set(WALLYS wallystart.c)
add_executable(wallystart ${WALLYS})
target_link_libraries(wallystart ${LIBSDL_LIBRARIES} ${LIBSDLIMG_LIBRARIES} ${LIBSDLTTF_LIBRARIES} SDL2_gfx)
install(TARGETS wallystart DESTINATION ${BIN_INSTALL_DIR})

set(DWALLYD_SRC wallyd.c nucly/env.c nucly/path.c seaduk.c ../lib/miniz.c)
add_executable(wallyd ${DWALLYD_SRC})
target_link_libraries(wallyd ${LIBUV_LIBRARIES} ${LIBSDL_LIBRARIES} wally seaduk)

install(TARGETS wallyd DESTINATION ${BIN_INSTALL_DIR})

